# CloudMesh

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  README.md  WORKSPACE  format.sh  main.cpp  output.txt  requirements.txt
CIFAR10/: file_statistics.py  test.txt  train_third.txt
CIFAR10/output/: metrics_0.json  metrics_final.json
include/: utility.h
include/IPC/: test_receiver.py  zmq_receiver.h  zmq_sender.h
include/Networking/: client.h  server.h
include/Peers/: bootstrap_node.h  peer.h  provider.h  requester.h
include/RequestResponse/: acknowledgement.h  discovery_request.h  discovery_response.h  message.h  model_state_dict_params.h  payload.h  registration.h  registration_response.h  task_request.h  task_response.h
ml/: aggregator.py  fake_peer.py  generate_temp_glob.py  main_simpleCNN.py  test_data_loading.py  test_main_simpleCNN.py  testing_requester_model.py  train_first.txt  train_second.txt
ml/dataloader/: __init__.py  dataset.py
ml/networks/: __init__.py  resnet18.py
ml/proto/: payload_pb2.py  utility_pb2.py
ml/utils/: __init__.py  network.py  test.py  train.py  val.py
proto/: payload.proto  utility.proto
sorting_python/: sorting.py
src/: utility.cpp
src/IPC/: zmq_receiver.cpp  zmq_sender.cpp
src/Networking/: client.cpp  server.cpp
src/Peers/: bootstrap_node.cpp  peer.cpp  provider.cpp  requester.cpp
src/RequestResponse/: discovery_request.cpp  discovery_response.cpp  generic_response.cpp  message.cpp  model_state_dict_params.cpp  payload.cpp  registration.cpp  registration_response.cpp  task_request.cpp  task_response.cpp
tests/: test_utility.cpp
